@@ -28,9 +28,9 @@ module ActiveMerchant #:nodoc:
         action = "void"
 
         post = {}
-        add_invoice(action, post, nil, options)
+        post[:ticketNumber] = authorization
 
-        commit(action, post, authorization)
+        commit(action, post)
       end
 
       def supports_scrubbing?
@@ -132,9 +132,9 @@ module ActiveMerchant #:nodoc:
         "void" => "charges"
       }
 
-      def commit(action, params, authorization=nil)
+      def commit(action, params)
         response = begin
-          parse(ssl_invoke(action, params, authorization))
+          parse(ssl_invoke(action, params))
         rescue ResponseError => e
           parse(e.response.body)
         end
@@ -151,11 +151,11 @@ module ActiveMerchant #:nodoc:
         )
       end
 
-      def ssl_invoke(action, params, authorization)
+      def ssl_invoke(action, params)
         if action == "void"
-          ssl_request(:delete_with_body, url(action, authorization), post_data(params), headers(action))
+          ssl_request(:delete, url(action, params), nil, headers(action))
         else
-          ssl_post(url(action, authorization), post_data(params), headers(action))
+          ssl_post(url(action, params), post_data(params), headers(action))
         end
       end
 
@@ -171,11 +171,11 @@ module ActiveMerchant #:nodoc:
         params.to_json
       end
 
-      def url(action, authorization)
+      def url(action, params)
         base_url = test? ? test_url : live_url
 
         if action == "void"
-          base_url + ENDPOINT[action] + "/" + authorization
+          base_url + ENDPOINT[action] + "/" + params[:ticketNumber]
         else
           base_url + ENDPOINT[action]
         end
