@@ -21,6 +21,7 @@
 * TransFirst Transaction Express: Fix improper AVS and CVV response code mapping [shasum] #2342
 * Digitzs: Remove merchant_id from gateway credentials [davidsantoso]
 * Braintree: Add Android Pay meta data fields [jknipp] #2347
+* Kushki: Remove body from void call [shasum] #2348
 
 == Version 1.63.0 (February 2, 2017)
 * Authorize.net: Add #unstore support [jimryan] #2293
